--- a/css/skills.css
+++ b/css/skills.css
@@ -1,79 +1,5 @@
-/* general */
-body{
-  font-family: 'Montserrat', sans-serif;
-}
-
-.content{
-  max-width: 90%;
-  margin: auto;
-}
-
-h1 {
-  font-size: 50px;
-  line-height: 60px;
-}
-
-p {
-  font-size: 20px;
-  line-height: 40px;
-  color: #868e96;
-}
-
-/* menu */
-header{
-  height: 10vh;
-}
-.top-menu{
-  padding: 20px 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.logo {
-  float: left;
-  width: 20%;
-}
-.menu {
-  float: right;
-  display: flex;
-}
-.menu > li {
-  padding-left: 5rem;
-}
-
-/* greeting section */
-
-.greeting{
-  display: flex;
-  align-items: center;
-  width: 100%;
-  height: 90vh;
-}
-.greeting > * {
-  flex: 1 1 ;
-}
-
-#greeting-image{
-  width:10%;
-  height:auto;
-  padding-left: 10%;
-}
-
-.greeting-wrapper{
-  height: 100%;
-}
-
-/* about section */
-
 .about{
-  padding-top: 5vh;
-  padding-bottom: 5vh;
-  height: 90vh;
   background-color: #f5f5f5;
-}
-
-#about-text{
-  padding-bottom: 3rem;
 }
 
   /* animation skills */
@@ -82,6 +8,11 @@ header{
     align-items: center;
     justify-content: space-between;
   }
+
+  .skills{
+    margin: 3rem
+  }
+
 
   .final__animation-bar-2 {
     position: relative;
